# cbioportal-mcp

./: .gitignore  AGENTS.md  README.md  debug_server.py  pyproject.toml  test_server.py
.github/workflows/: docker_ci.yml
docker/: Dockerfile
docs/: mcp-apps-plan.md  study-auth-row-policies.md
resources/: clinical-data-guide.md  common-pitfalls.md  mutation-frequency-guide.md  sample-filtering-guide.md
resources/study-guides/: brca_tcga_pan_can_atlas_2018.md  coadread_tcga_pan_can_atlas_2018.md  gbm_tcga_pan_can_atlas_2018.md  luad_tcga_pan_can_atlas_2018.md  msk_chord_2024.md  os_target_gdc.md  ov_tcga_pan_can_atlas_2018.md  ucec_tcga_pan_can_atlas_2018.md
scripts/: apply_sql.sh  update_oncotree.py  validate_study_auth_policies.sh
sql/: 1-add-column-comments.sql  2-add-oncotree-fields.sql  3-add-cancer-study-groups.sql  3-add-cancer-study-query-preferences.sql  4-mutation-coverage-views.sql  4-mutation-frequency-views.sql  4-public-portal-preferences.sql  5-gene-expression-views.sql  5-mutation-coverage-views.sql  5-public-portal-preferences.sql  6-study-auth-row-policies.sql  README.md  add-column-comments.sql  add-oncotree-fields.sql  cleanup-for-llm.sql
sql/portal-specific/public-portal/: 0-preferences.sql
src/cbioportal_mcp/: __init__.py  _compat.py  clickhouse_auth.py  cooccurrence_stats.py  env.py  server.py  survival_stats.py  telemetry.py  ui.py
src/cbioportal_mcp/authentication/: __init__.py  auth_provider.py  permissions.py  request_context.py  study_scope.py
src/cbioportal_mcp/backend_queries/: __init__.py  cancer_studies.py  clinical_data.py  genomic_data.py
src/cbioportal_mcp/mcp_queries/: __init__.py  shortcuts.py
src/cbioportal_mcp/prompts/: __init__.py  cbioportal_prompt.py
src/cbioportal_mcp/resources/: clinical-data-guide.md  common-pitfalls.md  external-resources-guide.md  faq-guide.md  gene-expression-guide.md  gene-resolution-guide.md  germline-guide.md  mutation-frequency-guide.md  oncotree.json  statistical-tests-guide.md  study-resolution-guide.md  system-prompt.md  treatment-guide.md
src/cbioportal_mcp/resources/guides/: _README.md
src/cbioportal_mcp/resources/study-guides/: _tcga_pancan_template.md  brca_tcga_pan_can_atlas_2018.md  gbm_tcga_pan_can_atlas_2018.md  luad_tcga_pan_can_atlas_2018.md  msk_chord_2024.md  os_target_gdc.md  ov_tcga_pan_can_atlas_2018.md
src/cbioportal_mcp/resources/widgets/: charts.html  cooccurrence.html  lollipop.html  oncoprint.html  survival.html
src/cbioportal_mcp/utils/: __init__.py
tests/: conftest.py  test_auth_config.py  test_auth_provider.py  test_charts.py  test_clickhouse_auth.py  test_cooccurrence.py  test_cooccurrence_stats.py  test_counting_unit_guidance.py  test_env_auth_config.py  test_guide_layer_issue_coverage.py  test_lollipop.py  test_oncoprint.py  test_resolution_helper_tools.py  test_server_authorized_query_path.py  test_source_boundary_guidance.py  test_study_auth_row_policy_sql.py  test_survival_curve.py  test_survival_stats.py
tests/authentication/: test_request_context.py  test_study_scope.py
