[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cbioportal-mcp"
version = "0.1.0"
description = "A specialized MCP interface for cBioPortal data analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "cBioPortal MCP Contributors" }
]
dependencies = [
    "fastmcp",
    # Pin mcp-clickhouse: 0.3.0 renamed the underlying tool from
    # `run_select_query` to `run_query`, breaking our import at
    # src/cbioportal_mcp/server.py. uv.lock already pins 0.1.11, but
    # Dockerfile uses `pip install .` which ignores the lock and pulls
    # PyPI latest. Pin explicitly here so fresh image builds match.
    "mcp-clickhouse==0.1.11",
    "clickhouse-driver>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
]

[project.scripts]
cbioportal-mcp = "cbioportal_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cbioportal_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

# Include resource files in the package
[tool.hatch.build.targets.wheel.force-include]
"src/cbioportal_mcp/resources" = "cbioportal_mcp/resources"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "B", "I"]
ignore = []