[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cbioportal-mcp"
version = "0.1.0"
description = "A specialized MCP interface for cBioPortal data analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "cBioPortal MCP Contributors" }]
dependencies = [
  "fastmcp==3.3.1",
  "mcp-clickhouse==0.1.11",
  "clickhouse-driver>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[project.scripts]
cbioportal-mcp = "cbioportal_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cbioportal_mcp"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/pyproject.toml"]

[tool.hatch.build.targets.wheel.force-include]
"src/cbioportal_mcp/resources" = "cbioportal_mcp/resources"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "B", "I"]
ignore = []
